<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Inscription">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarinscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#007bff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarinscription"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inscritpionLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/login2"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="8"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/inscriptionMDP"
                android:layout_width="wrap_content"
                android:typeface="monospace"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/mot_de_passe"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtMDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="8"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/inscriptionMDP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:text="@string/r_peter_le_mot_de_passe"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtMDP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="8"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/inscriptionSexe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:text="@string/sexe"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/SpinSex"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:entries="@array/SpinSexe" />


            <TextView
                android:id="@+id/inscriptionJour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:text="@string/jour_de_naissance"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtJour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="4"
                android:inputType="number" />

            <TextView
                android:id="@+id/inscriptionMois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:text="@string/mois_de_naissance"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtMois"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="4"
                android:inputType="number" />

            <TextView
                android:id="@+id/inscriptionAnnee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:text="@string/annee_de_naissance"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtAnnee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="5"
                android:inputType="number" />

            <TextView
                android:id="@+id/inscriptionVille"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:text="@string/ville"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtVille"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10" />

            <TextView
                android:id="@+id/inscriptionPays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pays"
                android:typeface="monospace"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/txtPays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/inscriptionEnregistrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#48d6e6"
                android:layout_marginTop="35dp"
                android:typeface="monospace"
                android:text="@string/enter"
                android:textSize="40dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>