<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RechercheAvancee"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#007bff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/radifficulte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="16dp"
            android:layout_marginTop="3dp"
            android:text="@string/difficult" />

        <Spinner
            android:id="@+id/spinnerdifficulte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/SpinDifficulte2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/racout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="16dp"
            android:layout_marginTop="3dp"
            android:text="@string/co_t" />

        <Spinner
            android:id="@+id/spinnercout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/SpinCout2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ratype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="16dp"
            android:layout_marginTop="3dp"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/spinnertype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/SpinType2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/raauteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="16dp"
            android:layout_marginTop="3dp"
            android:text="Auteur : " />

        <Spinner
            android:id="@+id/spinnerauteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/racouverts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="15dp"
            android:text="@string/nombres_de_couverts" />

        <EditText
            android:id="@+id/ranbrcouv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="3"
            android:inputType="number" />

        <TextView
            android:id="@+id/racouvertsfin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="15dp"
            android:text="@string/couverts" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ratprep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="15dp"
            android:text="@string/temps_de_pr_paration_entre" />

        <EditText
            android:id="@+id/ratprepmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:inputType="number" />

        <TextView
            android:id="@+id/ratprepet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="15dp"
            android:text="@string/et"/>

        <EditText
            android:id="@+id/ratprepmax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ratcuiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="15dp"
            android:text="@string/temps_de_cuissons_entre" />

        <EditText
            android:id="@+id/ratcuissmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:inputType="number" />

        <TextView
            android:id="@+id/ratcuisset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:typeface="monospace"
            android:textSize="15dp"
            android:text="@string/et"/>

        <EditText
            android:id="@+id/ratcuissmax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="2"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:typeface="monospace"
        android:textSize="20dp"
        android:backgroundTint="#48d6e6"
        android:text="@string/recherchersimple"
        tools:text="Rechercher" />
</LinearLayout>