<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarmodifiermdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#007bff"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarmodifiermdp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inscritpionLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:typeface="monospace"
                android:text="@string/ancien_mot_de_passe"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/ancienMDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/inscriptionMDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="monospace"
                android:layout_gravity="center"
                android:text="@string/nouveau_mot_de_passe"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/NewMDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/inscriptionMDP2"
                android:layout_width="wrap_content"
                android:typeface="monospace"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/r_peter_le_mot_de_passe"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/ReNewMDP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnChangeMDP"
                android:layout_width="wrap_content"
                android:typeface="monospace"
                android:layout_height="wrap_content"
                android:backgroundTint="#48d6e6"
                android:layout_gravity="center"
                android:text="@string/modifier"
                android:textSize="40dp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>